Updated the route geometry to resolved #13.

--- a/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
@@ -299,6 +299,7 @@
 
 
 <script>
+    // Set the date in the date picker box to the client's concept of today.
     var date = new Date();
     var datePicker = document.getElementById("DateStepped");
     datePicker.value = date.getFullYear().toString() + '-'
