Fixed a bug where steps weren't being grouped into the correct days on the leaderboard page.

--- a/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
@@ -18,9 +18,9 @@
         commaString = string.Empty;
         foreach (var ingest in graphData)
         {
-            commaString += $"\"{ingest.SummedDate.ToShortDateString()}\", ";
+            commaString += $"\"{ingest.DateStepped.ToShortDateString()}\", ";
         }
-        @Html.Raw($"var dateArr = [{commaString}\"{graphData.LastOrDefault().SummedDate.AddDays(-1).ToShortDateString()}\"];");
+        @Html.Raw($"var dateArr = [{commaString}\"{graphData.LastOrDefault().DateStepped.AddDays(-1).ToShortDateString()}\"];");
 
     }
 </script>
