--- a/Ocean2Ocean.Mvc/Views/Map/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/AddSteps.cshtml
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script>
     @{
-        var graphData = Model?.Take(14).ToArray();
+        var graphData = Model?.OrderByDescending(x => x.DateStepped).Take(14).ToArray();
         var commaString = string.Empty;
         foreach (var ingest in graphData)
         {
@@ -52,6 +52,9 @@
                                         Date
                                     </th>
                                     <th>
+                                        Created
+                                    </th>
+                                    <th>
                                         Journey
                                     </th>
                                     <th>
@@ -82,6 +85,9 @@
                                             </td>
                                             <td>
                                                 @entry?.DateStepped.ToShortDateString()
+                                            </td>
+                                            <td>
+                                                @entry?.Created.ToShortDateString()
                                             </td>
                                             <td>
                                                 @entry?.JourneyName
