--- a/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
@@ -5,7 +5,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script>
     @{
-        var graphData = Model?.SumByDay.Take(14).ToArray();
+        var graphData = Model?.SumByDay.Take(14).Reverse().ToArray();
         var commaString = string.Empty;
         foreach (var ingest in graphData)
         {
@@ -20,7 +20,7 @@
         {
             commaString += $"\"{ingest.DateStepped.ToShortDateString()}\", ";
         }
-        @Html.Raw($"var dateArr = [{commaString}\"{graphData.LastOrDefault().DateStepped.AddDays(-1).ToShortDateString()}\"];");
+        @Html.Raw($"var dateArr = [{commaString}\"{graphData.LastOrDefault().DateStepped.AddDays(1).ToShortDateString()}\"];");
 
     }
 </script>
