--- a/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
@@ -4,7 +4,7 @@
 }
 
 <script src='https://unpkg.com/@@turf/turf/turf.min.js'></script>
-<script src="~/js/route.js" asp-append-version="true"></script>
+<script src="@Model?.Journey?.GeometryFileName" asp-append-version="true"></script>
 <link rel="stylesheet" href="https://js.arcgis.com/4.15/esri/themes/light/main.css">
 <script src="https://js.arcgis.com/4.15/"></script>
 
